--- a/index.html
+++ b/index.html
@@ -4,111 +4,215 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-nav-logo" href="./index.html"
+          ><span class="header-logo-accent">Web</span>Studio</a
+        >
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">Studio</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">Portfolio</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-address">
+        <ul class="header-adress-list">
+          <li class="header-address-item">
+            <a class="header-address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-address-item">
+            <a class="header-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
-    <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero-tittle">
+          Effective solutions <span class="hero-tittle-accent">for</span> your
+          business
+        </h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>/</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="feature">
+        <h2 hidden>/</h2>
+        <ul class="feature-list">
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Strategy</h3>
+            <p class="feature-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Punctuality</h3>
+            <p class="feature-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Diligence</h3>
+            <p class="feature-description">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Technologies</h3>
+            <p class="feature-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="team-tittle">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-photo"
               src="./images/markguerrero.jpg"
               width="264"
               height="260"
               alt="photo"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member-name">Mark Guerrero</h3>
+            <p class="team-member-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-photo"
               src="./images/tomford.jpg"
               width="264"
               height="260"
               alt="photo"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member-name">Tom Ford</h3>
+            <p class="team-member-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-photo"
               src="./images/camilagarcia.jpg"
               width="264"
               height="260"
               alt="photo"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member-name">Camila Garcia</h3>
+            <p class="team-member-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-photo"
               src="./images/danielwilson.jpg"
               width="264"
               height="260"
               alt="photo"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member-name">Daniel Wilson</h3>
+            <p class="team-member-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <h2 class="portfolio-tittle">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/banking.jpg"
+              width="360"
+              height="300"
+              alt="Banking App"
+            />
+            <h3 class="portfolio-item-name">Banking App</h3>
+            <p class="portfolio-item-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/payment.jpg"
+              width="360"
+              height="300"
+              alt="Cashless Payment"
+            />
+            <h3 class="portfolio-item-name">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/medidation.jpg"
+              width="360"
+              height="300"
+              alt="Meditation App"
+            />
+            <h3 class="portfolio-item-name">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/taxi.jpg"
+              width="360"
+              height="300"
+              alt="Taxi Service"
+            />
+            <h3 class="portfolio-item-name">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/screen.jpg"
+              width="360"
+              height="300"
+              alt="Screen Illustrations"
+            />
+            <h3 class="portfolio-item-name">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/courses.jpg"
+              width="360"
+              height="300"
+              alt="Online Courses"
+            />
+            <h3 class="portfolio-item-name">Online Courses</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+        ><span class="footer-logo-accent">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
