--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-nav-logo" href="./index.html"
-          ><span class="header-logo-accent">Web</span>Studio</a
+          >Web<span class="header-logo-accent">Studio</span></a
         >
         <ul class="header-nav-list">
           <li class="header-nav-item">
-            <a class="header-nav-link" href="">Studio</a>
+            <a class="header-nav-link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
             <a class="header-nav-link" href="">Portfolio</a>
@@ -88,7 +88,7 @@
         </ul>
       </section>
       <section class="team-section">
-        <h2 class="team-tittle">Our Team</h2>
+        <h2 class="team-tittle">Our team</h2>
         <ul class="team-list">
           <li class="team-item">
             <img
@@ -137,7 +137,7 @@
         </ul>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio-tittle">Our Portfolio</h2>
+        <h2 class="portfolio-tittle">Our portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
@@ -210,7 +210,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-accent">Web</span>Studio</a
+        >Web<span class="footer-logo-accent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
